--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -124,3 +124,59 @@ body {
 ::-webkit-scrollbar-thumb {
   background: #00476d;
 }
+
+/*  */ /*  */
+/* landing */
+/*  */ /*  */
+
+.content {
+  overflow: hidden;
+  transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
+  max-height: 0;
+}
+
+.content.show {
+  height: auto;
+  transition: max-height 0.5s cubic-bezier(1, 0, 1, 0);
+  max-height: 9999px;
+}
+
+.item {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.cardd {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.cardd > div {
+  width: 30%;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 1024px) {
+  .cardd > div {
+    width: 45%;
+  }
+}
+
+@media (max-width: 768px) {
+  .cardd > div {
+    width: 100%;
+  }
+}
+/* 
+.mid {
+  display: flex;
+  flex-direction: row;
+  gap: 11px;
+}
+
+@media screen and (max-width: 768px) {
+  .mid {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+} */
