--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
@@ -8,9 +8,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Nunito", sans-serif !important;
+  font-family: 'Nunito', sans-serif !important;
 }
-
 
 .html {
   scroll-behavior: smooth !important;
@@ -163,21 +162,21 @@ body {
 }
 
 .Toastify__toast--success {
-  background-color: #EDF7ED !important;
-  color: #1E4620 !important;
+  background-color: #edf7ed !important;
+  color: #1e4620 !important;
 }
 
 .Toastify__toast--success .Toastify__toast-icon {
-  color: #2E7D32 !important;
+  color: #2e7d32 !important;
 }
 
 .Toastify__toast--error {
-  background-color: #FDEDED !important;
-  color: #5F2120 !important;
+  background-color: #fdeded !important;
+  color: #5f2120 !important;
 }
 
 .Toastify__toast--error .Toastify__toast-icon {
-  color: #D32F2F !important;
+  color: #d32f2f !important;
 }
 
 @media (max-width: 1024px) {
